assets/css/style.css
html {
  height: 100vh;
}

body {
  display: flex;
  flex-direction: column;
  font-family: 'Source Code Pro2', Arial, sans-serif;
  font-weight: 300;
  text-align: center;
  word-spacing: 0.25rem;
  background: #37474f;
  color: #cfd8dc;
  height: 100vh;
  margin: 0;
}

main {
  padding-bottom: 3rem;
  flex: 1;
}

a,
a:active,
a:visited {
  color: inherit;
}

img.u-photo {
  height: auto;
  max-width: 90vw;
  border-radius: 100%;
}

img.codewars {
  margin: 1rem 0;
}

h1,
h2,
h3 {
  font-weight: inherit;
  line-height: 1em;
  margin: 0.75em 0 0.75em 0;
}

h1 {
  font-size: 3.5rem;
  margin-bottom: 0;
}

h2 {
  font-size: 2.5rem;
  margin-top: 1rem;
}

h3 {
  font-size: 2rem;
  margin: 1em;
}

strong {
  font-weight: 500;
}

footer {
  line-height: 2.5em;
  font-size: 1rem;
  background: #263238;
}

a.external {
  display: inline-block;
  font-weight: 500;
  font-size: 1.25rem;
  text-decoration: none;
  background: #b0bec5;
  color: #263238;
  box-shadow: 0 0.125rem 0.3rem 0 rgba(0, 0, 0, 0.16),
    0 0.125rem 0.3rem 0 rgba(0, 0, 0, 0.12);

  width: 12rem;
  margin: 0.5rem 0.125rem;
  padding: 0.5rem;

  transition: background-color 125ms linear;
}

a.external:focus {
  outline: 0.125rem #37474f solid;
  outline-offset: -0.25rem;
}

a.external:hover,
a.external:active {
  background: #fefefe;
}

a.external span.socicon {
  margin-right: 1rem;
}

.hidden {
  display: none;
  visibility: hidden;
}

#welcome {
  color: #37474f;
  font-weight: 400;
  font-size: 1.5rem;
  background: #b0bec5;
  margin-top: -10rem;
  padding: 12rem 0 3rem;
}

#welcome p {
  text-align: left;
  max-width: 60rem;
  margin: 1rem auto;
  padding: 0 2rem;
}

#linked-profiles {
  padding: 3rem 0;
}

